fixed an anwrapping visual problem caused by a very long word LogisticRegression(random_state=23)

--- a/typo.css
+++ b/typo.css
@@ -1239,7 +1239,7 @@ iframe {
   }
 
   .carousel-description {
-    font-size: 0.75em;
+    font-size: 0.7em;
   }
 
 }
